# altair-streamlit-demo

./: .gitignore  .python-version  README.md  app.py  pyproject.toml  requirements.txt
cars_example/: altair_plots.ipynb
sales_example/: altair_plots.ipynb  app.py
