[tool.poetry]
name = "altair-streamlit-demo"
version = "0.1.0"
description = "Demo for Altair and Streamlit"
authors = ["Akaash Patel <akaashp2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
altair = "^5.4.1"
numpy = "^2.1.0"
pandas = "^2.2.2"
streamlit = "^1.38.0"
vega-datasets = "^0.9.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
